--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
   "license": "ISC",
   "dependencies": {
     "@types/node": "^22.13.11",
+    "axios": "^1.10.0",
     "body-parser": "^2.2.0",
+    "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "node-cron": "^4.1.1",
     "xlsx": "^0.18.5"
   },
-  "devDependencies": {},
   "description": ""
 }
