--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@api/gupshup": "file:.api/apis/gupshup",
     "@types/node": "^22.13.11",
     "axios": "^1.10.0",
     "body-parser": "^2.2.0",
